--- a/static/account.html
+++ b/static/account.html
@@ -72,7 +72,7 @@
     */
       function getSignedRequest(file) {
         const xhr = new XMLHttpRequest();
-        xhr.open("POST", `http://localhost:8000/api/promotion/signs3`);
+        xhr.open("POST", `http://127.0.0.1:8000/api/promotion/signs3`);
         xhr.setRequestHeader(
           "Content-Type",
           "application/x-www-form-urlencoded"
