--- a/static/account.html
+++ b/static/account.html
@@ -78,6 +78,7 @@
           "application/x-www-form-urlencoded"
         );
         xhr.send(`file-name=${file.name}&file-type=${file.type}`);
+        xhr.setRequestHeader("Content-Type","application/json");
         xhr.onreadystatechange = () => {
           console.log("In the stage change baby");
           console.log(xhr);
