--- a/static/account.html
+++ b/static/account.html
@@ -75,10 +75,10 @@
         xhr.open("POST", `http://13.251.35.187:8000/api/promotion/signs3`);
         xhr.setRequestHeader(
           "Content-Type",
-          "application/x-www-form-urlencoded"
+          // "application/x-www-form-urlencoded",
+          "application/json"
         );
         xhr.send(`file-name=${file.name}&file-type=${file.type}`);
-        xhr.setRequestHeader("Content-Type","application/json");
         xhr.onreadystatechange = () => {
           console.log("In the stage change baby");
           console.log(xhr);
